Nav width fix
background color not visible due to no width setting at one breakpoint

--- a/assets/sass/local-group.scss
+++ b/assets/sass/local-group.scss
@@ -563,6 +563,7 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
         top: 0;
         left: 0;
         bottom: 0;
+        right: 62%;
         border-right: 1px solid #9AAE88;
         background-color: #799361;
         z-index: 1;
